--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
       function highlightCommand(text) {
         return text
           .replace(
-            /(ADD|BOOK|CANCEL|CONFIRM|LIST|PAY|UPDATE|BUS|CONCERT|EVENTS|EVENT|BOOKING|NEW|TICKETS|FOR|FROM|IN|ON|PRICE|TO|WITH|AT)/g,
+            /(ADD|BOOKING|CANCEL|CONFIRM|LIST|PAY|UPDATE|BUS|CONCERT|EVENTS|EVENT|BOOK|NEW|TICKETS|FOR|FROM|IN|ON|PRICE|TO|WITH|AT)/g,
             '<span class="keyword">$1</span>'
           )
           .replace(/("[^"]*")/g, '<span class="string">$1</span>')
