--- a/static/index.html
+++ b/static/index.html
@@ -565,7 +565,7 @@
                   <div class="command-code">
                     <span class="keyword">CONFIRM</span>
                     <span class="keyword">BOOKING</span>
-                    <span class="number">1001</span>
+                    <span class="string">"QTX-5005"</span>
                   </div>
                 </div>
               </div>
@@ -579,7 +579,7 @@
                     <span class="keyword">PAY</span>
                     <span class="keyword">FOR</span>
                     <span class="keyword">BOOKING</span>
-                    <span class="number">1001</span>
+                    <span class="string">"QTX-5005"</span>
                   </div>
                 </div>
               </div>
@@ -592,7 +592,7 @@
                   <div class="command-code">
                     <span class="keyword">CANCEL</span>
                     <span class="keyword">BOOKING</span>
-                    <span class="number">1001</span>
+                    <span class="string">"QTX-5005"</span>
                   </div>
                 </div>
               </div>
